--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+   <!--<canvas id="cv" width="250" height="380"></canvas>-->
    <div id="bk6ch15ss2" class='conatiner' data-attr='continues' tabindex="0">
       <script type="text/javascript">
          (function ($) {
@@ -121,6 +122,9 @@
                      </table>
                   </div>
                </div>
+               <div class="springCanvas">
+                  <canvas id="cv" width="250" height="380"></canvas>
+               </div>
                <div class="graphDisplacementVsTime">
 
                </div>
@@ -198,6 +202,7 @@
          </div>
       </div>
       <script src="assets/js/TimeFactorObject.js"></script>
+      <script src="assets/js/spring.js"></script>
       <script src="assets/js/main.js"></script>
 </body>
 
